--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [8001, 5000],
+	"forwardPorts": [8200],
 
 	// Uncomment the next line to run commands after the container is created - for example installing curl.
 	"postCreateCommand": "/bin/bash -c .devcontainer/startup_script.sh",
